# ProjectAlderamin

./: .gitignore  README.md  experiment.ipynb  pyproject.toml
alderamin/: main.py
alderamin/backbone/blocks/: __init__.py  envelop.py  memory_efficient_attention.py  multihead_attention.py  psiformer_block.py  simple_jastrow.py
alderamin/backbone/models/: __init__.py  psiformer.py
alderamin/config/: __init__.py  base_config.yaml  psiformer_base_config.py  test.py
alderamin/data/: __init__.py
alderamin/data/particle_class/: __init__.py  atomic_nucleus.py  electron.py
alderamin/data/system/: __init__.py  elec_nucl.py  global_system.py
alderamin/folx/: custom_hessian.py  jvp.py  operators.py  utils.py  wrapped_functions.py
alderamin/sampler/: __init__.py  metropolis_hasting.py
alderamin/shampoo/: distributed_shampoo.py  quantization_utils.py
alderamin/trainer/: __init__.py  psiformer_trainer.py
alderamin/util/: __init__.py  ckpt.py
psiflax/: CH4.py  H2.py  Li2.py  LiH.py  main.py
psiflax/backbone/blocks/: __init__.py  custom_attention.py  envelop.py  envelop_legacy.py  multihead_attention.py  (+2 more)
psiflax/config/: base_config.yaml
psiflax/data/: __init__.py
psiflax/folx/: __init__.py  api.py  hessian.py  interpreter.py  jvp.py  tree_utils.py  vmap.py  wrapper.py
psiflax/hamiltonian/: __init__.py  vanilla_hamiltonian.py
psiflax/sampler/: __init__.py  metropolis_hasting.py
psiflax/shampoo/: distributed_shampoo.py
psiflax/trainer/: __init__.py  psiformer_trainer.py
psiflax/util/: __init__.py
psiflax/utils/: __init__.py  logdet.py
(+16 files in other folders)
