[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psiflax"
version = "0.5.0"
description = "Flax-based implementation of Psiformer and its variants"
requires-python = "<=3.11"
license = {text = "Mozilla Public License Version 2.0"}
dependencies = [
    "tensorflow",
    "jax[cuda12]",
    "jaxlib",
    "hydra-core",
    "optax",
    "flax",
    "einops",
    "clu",
    "numpy",
    "tqdm",
    "matplotlib",
    "periodictable",
    "attrs",
    "jaxtyping"
]

[tool.setuptools]
package-dir = {"" = "psiflax"}
include-package-data = true
zip-safe = true

[tool.setuptools.packages.find]
where = ["psiflax"]
